--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,10 +1,10 @@
-FROM amazonlinux:2022
+FROM amazonlinux:2.0.20230119.1
 
 # Set timezone to UTC
 RUN ln -sf /usr/share/zoneinfo/UTC /etc/localtime
 
 # Install ZSH and utilities
-RUN dnf install -y git wget util-linux-user awscli zsh htop
+RUN yum install -y git wget tar nano yum-utils telnet util-linux-user awscli zsh htop
 
 # Set ZSH as default
 RUN chsh -s /bin/zsh
@@ -16,4 +16,4 @@ RUN sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/inst
 COPY .zshrc /root/.zshrc
 
 # Cleanup
-RUN dnf clean dbcache
+RUN yum clean all
