--- a/httpd/Dockerfile
+++ b/httpd/Dockerfile
@@ -1,9 +1,9 @@
 FROM nicekiwi/aws-base:latest
 
-RUN dnf install -y httpd
+RUN yum install -y httpd
 
 # Cleanup
-RUN dnf clean dbcache
+RUN yum clean all
 
 # https://httpd.apache.org/docs/2.4/stopping.html#gracefulstop
 STOPSIGNAL SIGWINCH
