Update image base on build

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -3,6 +3,9 @@ FROM amazonlinux:2.0.20230119.1
 # Set timezone to UTC
 RUN ln -sf /usr/share/zoneinfo/UTC /etc/localtime
 
+# Update image
+RUN yum update -y
+
 # Install ZSH and utilities
 RUN yum install -y git wget tar nano yum-utils telnet util-linux-user awscli zsh htop
 
