Prepare for multi-branch source to multi-arch

--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,5 +1,5 @@
-ARG BASE_TAG=latest
-FROM nicekiwi/aws-base:${BASE_TAG:-latest}
+ARG ARCH=amd64
+FROM nicekiwi/aws-base:${ARCH:-amd64}
 
 # Install NVM
 RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
