Update vars for arm64 support

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,6 +1,6 @@
-ARG BASE_ARCH=amd64
+ARG BASE_ARCH=arm64v8
 ARG BASE_VERSION=2
-FROM ${BASE_ARCH:-amd64}/amazonlinux:${BASE_VERSION:-2}
+FROM ${BASE_ARCH:-arm64v8}/amazonlinux:${BASE_VERSION:-2}
 
 # Set timezone to UTC
 RUN ln -sf /usr/share/zoneinfo/UTC /etc/localtime
