--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -3,7 +3,7 @@ ARG BASE_VERSION=2
 FROM ${BASE_ARCH:-amd64}/amazonlinux:${BASE_VERSION:-2}
 
 # Set timezone to UTC
-RUN ln -sf /usr/share/zoneinfo/UTC /etc/localtime
+RUN ln -snf /usr/share/zoneinfo/UTC /etc/localtime
 
 # Update image
 RUN yum update -y
