--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,5 +1,5 @@
 ARG ARCH=amd64
-FROM nicekiwi/aws-base:${ARCH:-amd64}
+FROM nicekiwi/aws-base:${ARCH}
 
 # Install NVM
 RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash
