--- a/php-81/Dockerfile
+++ b/php-81/Dockerfile
@@ -1,5 +1,5 @@
 ARG ARCH=amd64
-FROM nicekiwi/aws-base:${ARCH:-amd64}
+FROM nicekiwi/aws-base:${ARCH}
 
 # Install PHP 8.1
 RUN amazon-linux-extras install -y php8.1
