--- a/php-80/Dockerfile
+++ b/php-80/Dockerfile
@@ -5,7 +5,7 @@ FROM nicekiwi/aws-base:${ARCH}
 RUN amazon-linux-extras install -y php8.0
 
 # Install PHP extensions
-RUN yum install -y php-{mysqlnd,pgsql,devel,gd,mbstring,xml,bcmath,opcache,intl,pdo,zip,opcache,redis,exif,calendar,soap,gettext,pcntl}
+RUN yum install -y php-{mysqlnd,pgsql,devel,gd,mbstring,xml,bcmath,opcache,intl,pdo,zip,exif,calendar,soap,gettext,pcntl}
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
